--- a/src/styles/style.scss
+++ b/src/styles/style.scss
@@ -29,6 +29,7 @@
 @import './components/_patient-case-file.scss';
 @import './components/_case-file-modal.scss';
 @import './components/stay-connected.scss';
+@import './components/_skeleton.scss';
 
 
 .section__home-video {
