--- a/src/pages/usual-suspects.astro
+++ b/src/pages/usual-suspects.astro
@@ -25,13 +25,83 @@ const tabs:tabProps[] = [
     </div>
 
     <h2 class="content-title">A DISEASE IN DISGUISE</h2>
-    <p class="content-pharagraph" >Delayed and misdiagnoses often happen in hypophosphatasia cases because of how well it masks itself other more common diseases</p>
-    <p class="content-pharagraph content-pharagraph--secondary" >Symptoms of hypophosphatasia are often common across other metabolic disorders and various diseases, which can impact timely and accurate diagnosis.</p>
+    <p class="content-pharagraph" >Delayed identification and misdiagnoses often happen in hypophosphatasia cases because of how well it masks itself as other more common diseases.1-5</p>
+    <p class="content-pharagraph content-pharagraph--secondary" >Symptoms of hypophosphatasia are often common across other metabolic disorders and various diseases, which can impact timely and accurate diagnosis.1-5</p>
 
     <h3 class="section-title" ></h3>
+  </section>
 
-    <div class="file-background-container" ></div>
-
+  <section class="usual-suspects-tabs" >
+    <section class="design-system-section">
+      <div class="section-wrapper section-wrapper--small">
+        <h1 class="title">Tabs</h1>
+        <ul role="tablist">
+          <li role="presentation">
+            <!--active one -->
+            <a href="#usual-suspects-panel-1" role="tab" id="tab1" aria-selected="true">Tab 1</a>
+          </li>
+          <li role="presentation">
+            <a href="#usual-suspects-panel-2" role="tab" id="tab2" tabindex="-1">Tab 2</a>
+          </li>
+          <li role="presentation">
+            <a href="#usual-suspects-panel-3" role="tab" id="tab3" tabindex="-1">Tab 3</a>
+          </li>
+        </ul>
+        <section
+          id="usual-suspects-panel-1"
+          class="usual-suspects-panel usual-suspects-panel-1"
+          role="tabpanel"
+          aria-labelledby="tab1"
+          aria-hidden="false"
+          tabindex="-1"
+        >
+          <h2>Adults</h2>
+          <p>
+            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Maecenas dui
+            nibh, fermentum ac gravida quis, <a href="#">tempus sit</a> amet nulla.
+            Fusce dignissim dolor sit amet sapien auctor, eu vehicula elit placerat.
+            Aliquam vehicula luctus enim, at ullamcorper risus. Aliquam ut tincidunt
+            ipsum. Vivamus dui mi, suscipit vitae libero id, interdum aliquet metus.
+          </p>
+        </section>
+        <section
+          id="usual-suspects-panel-2"
+          class="usual-suspects-panel usual-suspects-panel-2"
+          role="tabpanel"
+          aria-labelledby="tab2"
+          aria-hidden="true"
+          tabindex="-1"
+          hidden
+        >
+          <h2>Children/Adolescents</h2>
+          <p>
+            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Maecenas dui
+            nibh, fermentum ac gravida quis, <a href="#">tempus sit</a> amet nulla.
+            Fusce dignissim dolor sit amet sapien auctor, eu vehicula elit placerat.
+            Aliquam vehicula luctus enim, at ullamcorper risus. Aliquam ut tincidunt
+            ipsum. Vivamus dui mi, suscipit vitae libero id, interdum aliquet metus.
+          </p>
+        </section>
+        <section
+          id="usual-suspects-panel-3"
+          class="usual-suspects-panel usual-suspects-panel-3"
+          role="tabpanel"
+          aria-labelledby="tab3"
+          aria-hidden="true"
+          tabindex="-1"
+          hidden
+        >
+          <h2>Neonates/Infants</h2>
+          <p>
+            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Maecenas dui
+            nibh, fermentum ac gravida quis, <a href="#">tempus sit</a> amet nulla.
+            Fusce dignissim dolor sit amet sapien auctor, eu vehicula elit placerat.
+            Aliquam vehicula luctus enim, at ullamcorper risus. Aliquam ut tincidunt
+            ipsum. Vivamus dui mi, suscipit vitae libero id, interdum aliquet metus.
+          </p>
+        </section>
+      </div>
+    </section>
   </section>
 
     
