--- a/src/styles/style.scss
+++ b/src/styles/style.scss
@@ -46,6 +46,8 @@
         text-transform: uppercase;
         color: $color-cinnabar;
         text-align: center;
+        max-width: 780px;
+        margin: auto;
         margin-bottom: 2.5rem;
     }
 }
