--- a/src/styles/settings/_global.scss
+++ b/src/styles/settings/_global.scss
@@ -81,3 +81,10 @@ body {
         background-image: url("/assets/images/background-stars-desktop.png");
     }
 }
+
+@media screen and (min-width: 1440px) {
+  body {
+    background-repeat: no-repeat;
+    background-size: cover;
+  }
+}
